<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KISI</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember password</string>
    <string name="Login">Login</string>
    <string name="slogan">The key in your phone</string>
    <string name="kisi">KISI</string>
    <string name="logo">Logo</string>
    <string name="slogantwo">Unlock your world</string>
    <string name="forgot">Forgot your password?</string>
    <string name="newUser">New? Get started on our website</string>
    <string name="login_success">Login successful"</string>

    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share this place</string>
    <string name="log">Get log information</string>
    <string name="logout">Logout</string>
    <string name="setup">Setup KISI device</string>
    
    <string name="pressto">Press to secure unlock</string>
    <string name="opening">Opening lock…</string>
    <string name="share_owner_only">Only the owner of a place can create new keys.</string>
    <string name="share_title">Share place:</string>
    <string name="share_popup_msg">"Enter email and select locks you want to share:"</string>
    <string name="share_submit_button">Share!</string>
    <string name="share_success">Key for %s was created successfully.</string>
    <string name="share_error">You have to share at least one lock!</string>
    
    <string name="session_timeout_relogin">Session timeout. Please login again.</string>
    <string name="logout_in_progress">Logging out…</string>
    <string name="logout_successful">Logged out successfully.</string>


</resources>
